# COFFE_PREDICT

./: API_main.py  Main.py  Network.py  Network_lstm.py  README.md  Utils.py  console.py  console_test.py  pyproject.toml
API/: crawl.py  links.json
API/Data_api/: Beef.json  Brent.json  Butter.json  Canola.json  Cheese.json  Coal.json  Cocoa.json  Coffee.json  Copper.json  Corn.json  Cotton.json  CrudeOil.json  EggsCH.json  Ethanol.json  FeederCattle.json  Gasoline.json  Gold.json  HRCSteel.json  HeatingOil.json  IronOre.json  LeanHogs.json  LiveCattle.json  London_US.json  Lumber.json  Methanol.json  Milk.json  Naphtha.json  NaturalGas.json  Oat.json  OrangeJuice.json  PalmOil.json  Platinum.json  Potatoes.json  Poultry.json  Propane.json  Rapeseed.json  Rice.json  Rubber.json  Salmon.json  Silver.json  (+10 more)
API/Data_api - Copy/: Beef.json  Brent.json  Butter.json  Canola.json  Cheese.json  Coal.json  Cocoa.json  Coffee.json  Copper.json  Corn.json  Cotton.json  CrudeOil.json  EggsCH.json  Ethanol.json  FeederCattle.json  Gasoline.json  Gold.json  HRCSteel.json  HeatingOil.json  IronOre.json  LeanHogs.json  LiveCattle.json  London_US.json  Lumber.json  Methanol.json  Milk.json  Naphtha.json  NaturalGas.json  Oat.json  OrangeJuice.json  PalmOil.json  Platinum.json  Potatoes.json  Poultry.json  Propane.json  Rapeseed.json  Rice.json  Rubber.json  Salmon.json  Silver.json  (+10 more)
Data/: Starbucks Dataset.csv  coffee-prices-historical-data.csv  data.npz  data_sr.npz  data_tmp.npz  result.json  train.json
Demo/: ChatBot_test.py  Main.py
Model/: Network_lstm.py  Utils.py
(+4 files in other folders)
