[tool.poetry]
name = "coffe neuron"
version = "0.1.0"
description = ""
authors = ["sjnosukequy <vuongquy51@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
requests = "^2.32.3"
fastapi = {extras = ["standard"], version = "^0.115.2"}
selenium = "^4.25.0"
schedule = "^1.2.2"
psutil = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
